[gd_scene load_steps=4 format=3 uid="uid://d0mripivslgh"]

[ext_resource type="Script" path="res://Storage/StoragePage.gd" id="1_1o46y"]
[ext_resource type="Texture2D" uid="uid://dsjm6n8njvbqo" path="res://png/frame.png" id="1_n4seb"]
[ext_resource type="PackedScene" uid="uid://dkk4ce7nk7mdd" path="res://BG.tscn" id="3_tog2w"]

[node name="Storage" type="Node2D"]
script = ExtResource("1_1o46y")

[node name="Object" type="Node2D" parent="."]

[node name="Frame" type="Node2D" parent="."]

[node name="Frame1" type="Sprite2D" parent="Frame"]
position = Vector2(170, 130)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_n4seb")

[node name="Amount" type="Label" parent="Frame/Frame1"]
offset_left = -30.0
offset_top = 110.0
offset_right = 750.0
offset_bottom = 730.0
theme_override_font_sizes/font_size = 450
horizontal_alignment = 2

[node name="Frame2" type="Sprite2D" parent="Frame"]
position = Vector2(440, 130)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_n4seb")

[node name="Amount" type="Label" parent="Frame/Frame2"]
offset_left = -30.0
offset_top = 110.0
offset_right = 750.0
offset_bottom = 730.0
theme_override_font_sizes/font_size = 450
horizontal_alignment = 2

[node name="Frame3" type="Sprite2D" parent="Frame"]
position = Vector2(710, 130)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_n4seb")

[node name="Amount" type="Label" parent="Frame/Frame3"]
offset_left = -30.0
offset_top = 110.0
offset_right = 750.0
offset_bottom = 730.0
theme_override_font_sizes/font_size = 450
horizontal_alignment = 2

[node name="Frame4" type="Sprite2D" parent="Frame"]
position = Vector2(980, 130)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_n4seb")

[node name="Amount" type="Label" parent="Frame/Frame4"]
offset_left = -30.0
offset_top = 110.0
offset_right = 750.0
offset_bottom = 730.0
theme_override_font_sizes/font_size = 450
horizontal_alignment = 2

[node name="Frame5" type="Sprite2D" parent="Frame"]
position = Vector2(170, 330)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_n4seb")

[node name="Amount" type="Label" parent="Frame/Frame5"]
offset_left = -30.0
offset_top = 110.0
offset_right = 750.0
offset_bottom = 730.0
theme_override_font_sizes/font_size = 450
horizontal_alignment = 2

[node name="Frame6" type="Sprite2D" parent="Frame"]
position = Vector2(440, 330)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_n4seb")

[node name="Amount" type="Label" parent="Frame/Frame6"]
offset_left = -30.0
offset_top = 110.0
offset_right = 750.0
offset_bottom = 730.0
theme_override_font_sizes/font_size = 450
horizontal_alignment = 2

[node name="Frame7" type="Sprite2D" parent="Frame"]
position = Vector2(710, 330)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_n4seb")

[node name="Amount" type="Label" parent="Frame/Frame7"]
offset_left = -30.0
offset_top = 110.0
offset_right = 750.0
offset_bottom = 730.0
theme_override_font_sizes/font_size = 450
horizontal_alignment = 2

[node name="Frame8" type="Sprite2D" parent="Frame"]
position = Vector2(980, 330)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_n4seb")

[node name="Amount" type="Label" parent="Frame/Frame8"]
offset_left = -30.0
offset_top = 110.0
offset_right = 750.0
offset_bottom = 730.0
theme_override_font_sizes/font_size = 450
horizontal_alignment = 2

[node name="Frame9" type="Sprite2D" parent="Frame"]
position = Vector2(170, 530)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_n4seb")

[node name="Amount" type="Label" parent="Frame/Frame9"]
offset_left = -30.0
offset_top = 110.0
offset_right = 750.0
offset_bottom = 730.0
theme_override_font_sizes/font_size = 450
horizontal_alignment = 2

[node name="Frame10" type="Sprite2D" parent="Frame"]
position = Vector2(440, 530)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_n4seb")

[node name="Amount" type="Label" parent="Frame/Frame10"]
offset_left = -30.0
offset_top = 110.0
offset_right = 750.0
offset_bottom = 730.0
theme_override_font_sizes/font_size = 450
horizontal_alignment = 2

[node name="Frame11" type="Sprite2D" parent="Frame"]
position = Vector2(710, 530)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_n4seb")

[node name="Amount" type="Label" parent="Frame/Frame11"]
offset_left = -30.0
offset_top = 110.0
offset_right = 750.0
offset_bottom = 730.0
theme_override_font_sizes/font_size = 450
horizontal_alignment = 2

[node name="Frame12" type="Sprite2D" parent="Frame"]
position = Vector2(980, 530)
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_n4seb")

[node name="Amount" type="Label" parent="Frame/Frame12"]
offset_left = -30.0
offset_top = 110.0
offset_right = 750.0
offset_bottom = 730.0
theme_override_font_sizes/font_size = 450
horizontal_alignment = 2

[node name="Back" type="Button" parent="."]
offset_left = 1064.0
offset_top = 6.0
offset_right = 1145.0
offset_bottom = 62.0
theme_override_font_sizes/font_size = 25
text = "Back"

[node name="BG" parent="." instance=ExtResource("3_tog2w")]

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
